@@ -1,0 +1,2 @@
+[build_i18n]
+desktop_files=[ ('share/applications', ['data/onboard.desktop.in', 'data/onboard-settings.desktop.in']) ]
